# elastic

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-readme.md  pyproject.toml  template.md  test.py
app/: config.py  main.py
app/api/: routes.py
app/models/: document.py
app/schemas/: search.py
app/services/: elasticsearch_service.py
