[project]
name = "elastic1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "black>=25.9.0",
    "elasticsearch==8.10.0",
    "fastapi>=0.120.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]
