[tool.poetry]
name = "elastic-gov"
version = "0.1.0"
description = ""
authors = ["Danil <icegnom7@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
pydantic-settings = "^2.11.0"
aiohttp = "^3.13.2"
elasticsearch = "8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
